[gd_scene load_steps=6 format=1]

[ext_resource path="res://assets/2x2.png" type="Texture" id=1]
[ext_resource path="res://GDscript/machine.gd" type="Script" id=2]
[ext_resource path="res://assets/oh.png" type="Texture" id=3]
[ext_resource path="res://GDscript/oh.gd" type="Script" id=4]



[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 18.7031, 5.03037 )

[node name="Sprite" type="Sprite"]

texture = ExtResource( 1 )
script/script = ExtResource( 2 )
countdownMax = 100

[node name="oh" type="Sprite" parent="."]

transform/pos = Vector2( 0, -128 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="collisionSpace" type="Area2D" parent="."]

transform/pos = Vector2( 0, 208 )
transform/scale = Vector2( 3, 1.5 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.71094, 0, 0, 6.64145, 9.53674e-07, -1.90735e-06 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisionSpace"]

transform/pos = Vector2( 9.53674e-07, -1.90735e-06 )
transform/scale = Vector2( 1.71094, 6.64145 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="ProgressBar" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -64.0
margin/top = -128.0
margin/right = 64.0
margin/bottom = -96.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[connection signal="area_enter" from="collisionSpace" to="." method="_on_collisionSpace_area_enter"]

[connection signal="body_enter" from="collisionSpace" to="." method="_on_collisionSpace_body_enter"]

[connection signal="body_exit" from="collisionSpace" to="." method="_on_collisionSpace_body_exit"]


